# zk-sca

./: .gitignore  .taplo.toml  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: integration.rs
crates/guest/: Cargo.toml
crates/guest-abi/: Cargo.toml
crates/guest-abi-utils/: Cargo.toml
crates/guest-abi-utils/src/: lib.rs  merkle_builder.rs  merkle_verifier.rs  tar.rs
crates/guest-abi/src/: error.rs  guest.rs  lib.rs  merkle.rs
crates/guest/method/: Cargo.toml
crates/guest/method/src/: audit.rs  cargo.rs  main.rs
crates/guest/src/: lib.rs
crates/prover/: Cargo.toml
crates/prover/src/: env_guard.rs  errors.rs  lib.rs  prover.rs
crates/prover/tests/: end_to_end.rs  env_conflict.rs  security.rs
crates/prover/tests/common/: mod.rs
crates/types/: Cargo.toml
crates/types/src/: bundle.rs  dependency.rs  error.rs  lib.rs  license.rs  package_manager.rs  validation.rs
crates/types/tests/: smoke.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: lib.rs
crates/verifier/tests/: verify_receipt.rs
fixtures/: permitted-dependencies-minimal.json  permitted-dependencies.json
fixtures_sources/cargo_lock_v1/: Cargo.toml
fixtures_sources/cargo_lock_v2/: Cargo.toml
fixtures_sources/missing_lockfile/: Cargo.toml
fixtures_sources/multi_workspace_single_pkgs/b/: Cargo.toml
fixtures_sources/no_deps/: Cargo.toml
fixtures_sources/non_virtual_workspace_safe/: Cargo.toml
fixtures_sources/non_virtual_workspace_safe/a/: Cargo.toml
fixtures_sources/non_virtual_workspace_vuln/: Cargo.toml
fixtures_sources/permitted_dependencies/: Cargo.toml
fixtures_sources/permitted_dependencies/src/: main.rs
fixtures_sources/safe/: Cargo.toml
fixtures_sources/safe_lockfile_unsafe_manifest/: Cargo.toml
fixtures_sources/undeclared_dep/: Cargo.toml
fixtures_sources/virtual_workspace_safe/a/: Cargo.toml
fixtures_sources/virtual_workspace_vuln/: Cargo.toml
fixtures_sources/virtual_workspace_vuln/a/: Cargo.toml
fixtures_sources/vuln/: Cargo.toml
fixtures_sources/vuln/src/: main.rs
