[package]
name = "zk-sca-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
risc0-zkvm = "~2.3"
serde_json = "1.0"
zk-sca-prover = { path = "../prover" }
zk-sca-types = { path = "../types" }
zk-sca-verifier = { path = "../verifier" }
