[package]
name = "zk-sca-guest-abi-utils"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
hashbrown = { version = "0.15.3" }
risc0-zkvm = { version = "~2.3", default-features = false }
zk-sca-guest-abi = { path = "../guest-abi" }

flate2 = { version = "1.0", optional = true, default-features = false, features = [
  "rust_backend",
] }
tar = { version = "0.4.44", optional = true, default-features = false }
thiserror = { version = "1.0", optional = true }

[features]
default = []
std = ["flate2", "thiserror", "risc0-zkvm/std", "tar"]
