[workspace]

[package]
name = "permitted_dependencies"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
crates_io_api = "0.11.0"
rustsec = "0.30.2"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spdx = { version = "0.10.8", default-features = false }
zk-sca-types = { path = "../../crates/types" }
